--- a/src/styles/section2.module.css
+++ b/src/styles/section2.module.css
@@ -28,7 +28,7 @@
     font-weight: 600;
 }
 
-#title{
+#header{
     font-size: 2.5vw;
     width: 40vw;
 }
@@ -38,4 +38,5 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin: 50px 0px;
 }
