--- a/src/styles/section2.module.css
+++ b/src/styles/section2.module.css
@@ -4,8 +4,6 @@
     padding: 0 10vw;
     padding-top: 10vh;
 
-    height: 300vh;
-
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -39,4 +37,15 @@
     flex-wrap: wrap;
     justify-content: space-between;
     margin: 50px 0px;
+}
+
+#bottom-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+#bottom-container > div{
+    margin-top: 4vw;
+    margin-right: 3vw;
 }
